# game-of-life-hack-night

./: .gitignore  default.nix  game-of-life.cabal  stack.yaml
app/: Main.hs
examples/: blinker  glider  glidergun  penta
src/: Console.hs  GameOfLife.hs
test/: Main.hs
